# Olympia_proposal_challenge

./: CMakeLists.txt  README.md  ShapeFactory.hpp  a.out  main  main.cpp  olympia_challenge.cpp  run.sh
shapes/: circle.hpp  triangle.hpp
